# retail-analytics-hub

./: .dockerignore  .gitignore  Makefile  README.md  config_overrides.json  fabric.env.example  main.py  prompts.toml  pyproject.toml  recommendations.json
agents/: .env.example  docker-compose.local.yml  docker-compose.yml
agents/agent1_explainer/: Dockerfile  agents.py  executors.py  main.py  orchestrator.py  prompts.py  pyproject.toml  workflow_manager.py
agents/agent1_explainer/agents/: formatter.py  intent.py  planner.py
agents/agent2_narrative/: Dockerfile  agents.py  executors.py  main.py  orchestrator.py  prompts.py  pyproject.toml  workflow_manager.py
agents/agent2_narrative/agents/: analyzer.py  formatter.py  intent.py  planner.py
agents/agent3_sentiment/: Dockerfile  __init__.py  agents.py  db.py  eventhub.py  executors.py  main.py  prompts.py  pyproject.toml  workflow_manager.py
agents/mcp_server/: pyproject.toml  server.py
agents/mcp_server/tools/: aggregated.py  engagement_tab.py  inventory_tab.py  main_tab.py  omnichannel_tab.py  reviews_tab.py  timeseries.py
agents/mcp_server/tools/sql_variants/: __init__.py
agents/shared/: __init__.py  config.py  db.py  mcp_tools.py  models.py  telemetry.py
analysis/: config_applier.py  sweep_recommend.py  sweep_report.py  train_models.py
dashboard/: Dockerfile  PRD.md  index.html  package-lock.json  package.json  tsconfig.server.json  vite.config.ts
dashboard/server/: index.ts  query-executor.ts  tracing.ts
dashboard/shared/: metric-queries-mssql.ts  metric-queries.ts
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: ChatInterface.tsx  DashboardView.tsx  DigestView.tsx  MarkdownText.tsx  MetricBreakdownDialog.tsx  MetricDetailView.tsx  MetricTile.tsx  NavigationSidebar.tsx  ReviewTableView.tsx
dashboard/src/hooks/: use-metrics.ts
dashboard/src/lib/: api-client.ts  metric-registry.ts  mock-data.ts  types.ts
docs/: agents.md  concepts.md  dashboard.md  data.md  logging.md  metrics.md  ml.md  security-checklist.md  sql-parity.md  sweeps.md  testing.md  workflows.md
docs/architecture/: cloud-architecture.drawio
fabric-admin-scripts/: create-fabric-lakehouse.sh  create-fabric-realtime-intelligence.sh  manage-fabric-capacity.sh  purge-onelake.sh
infra/cloud/: main.tf
infra/cloud/probes/: agent1.yaml  agent2.yaml  agent3.yaml  dashboard.yaml
infra/local/: main.tf
seed-data/: cleanup_cosmos.py  cleanup_postgres.py  merge_sweeps.py  seed_cloud.py  seed_cosmos.py  seed_local.py  seed_postgres.py  validate_data.py
simulation/: __init__.py  check_cloud.py  customer_review_simulator.py  review_generator.py  run_simulation.py
simulation/ml/: __init__.py  campaign_response_model.py  churn_model.py  clv_model.py  conversion_model.py  data_prep.py  demand_forecast.py  fulfillment_model.py  lead_time_model.py  stockout_model.py  value_model.py
simulation/shared/: __init__.py  config.py  local_backend.py  metrics.py  persistence.py  resources.py
simulation/sweep/: __init__.py  config_generator.py  scenario_tracker.py  sweep_runner.py
simulation/workflows/: __init__.py  customer_engagement.py  inventory_replenishment.py  omnichannel_purchase.py
sql-parity-tests/: docker-compose-sqlserver.yml  sql_parity_test.py
sync/: config.py  export_cosmos.py  export_eventhub.py  export_postgres.py  upload.py  validate_cloud.py
sync/importer/: Dockerfile  cosmos_handler.py  eventhub_handler.py  main.py  postgres_handler.py  pyproject.toml
temp-stash/: .env.example  docker-compose.yml  query_fabric_kql.py  query_fabric_sql.py  test_local_sqlserver.py
tests/: docker-compose-sqlserver.yml  parity-report.json  sql_parity_test.py
