[project]
name = "simulation-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "faker>=40.5.1",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.1",
    "simpy>=4.1.1",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "prophet>=1.1.5",
    "joblib>=1.3.0",
]
