[project]
name = "simulation-workflows"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "faker>=40.5.1",
    "numpy>=2.4.2",
    "python-dotenv>=1.2.1",
    "simpy>=4.1.1",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "prophet>=1.1.5",
    "joblib>=1.3.0",
    "pydantic-settings>=2.13.1",
    "mcp>=1.26.0",
    "httpx>=0.27.0",
    "mssql-python>=1.0.0",
    "azure-kusto-data>=6.0.2",
    "azure-identity>=1.25.2",
    "pymssql>=2.3.13",
    "opentelemetry-api>=1.25.0,<1.39.0",
    "opentelemetry-sdk>=1.25.0,<1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<0.60b0",
    "opentelemetry-instrumentation-httpx>=0.46b0,<0.60b0",
    "opentelemetry-instrumentation-logging>=0.46b0,<0.60b0",
    "opentelemetry-exporter-otlp>=1.25.0,<1.39.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b21",
]

[project.optional-dependencies]
sync = [
    "azure-storage-blob",
    "azure-identity",
    "pyarrow",
    "azure-cosmos",
    "psycopg",
]
