[project]
name = "agent1-explainer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "autogen-agentchat>=0.4.0",
    "autogen-ext[openai,mcp]>=0.4.0",
    "mcp>=1.0.0",
    "duckdb>=1.4.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
