[project]
name = "agent1-explainer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework",
    "azure-identity>=1.16.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=1.4.4",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]
