[project]
name = "agent2-narrative"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework",
    "azure-identity>=1.16.0",
    "fastapi>=0.115.0",
    "sse-starlette>=3.0.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=1.4.4",
    "psycopg[binary]>=3.1.0",
    "mssql-python>=1.0.0",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
]
