[project]
name = "agent3-sentiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework",
    "azure-identity>=1.16.0",
    "azure-eventhub>=5.14.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=1.4.4",
    "psycopg[binary]>=3.1.0",
    "mssql-python>=1.0.0",
    "azure-kusto-data>=6.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "opentelemetry-api>=1.25.0,<1.39.0",
    "opentelemetry-sdk>=1.25.0,<1.39.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0,<0.60b0",
    "opentelemetry-instrumentation-httpx>=0.46b0,<0.60b0",
    "opentelemetry-instrumentation-logging>=0.46b0,<0.60b0",
    "opentelemetry-exporter-otlp>=1.25.0,<1.39.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b21",
]
